scrollbar bug fixed

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -376,7 +376,10 @@ ul.dropdown-menu.show {
     }
 }
 
-html,
+html {
+    scrollbar-gutter: stable;
+}
+
 body {
-    overflow-y: auto;
+    overflow-x: hidden;
 }
